--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -490,20 +490,20 @@ footer .list-inline .list-inline-item {
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
-
   .text-logo {
     display: none;
   }
 
-  .content-Testimonios, .content-Testimonios .row {
+  .content-Testimonios,
+  .content-Testimonios .row {
     display: flex;
   }
-  
+
   .grid-item img {
     width: 200px;
     height: 150px;
   }
-  
+
   .grid-item audio {
     margin: 0px auto;
     width: 100%;
@@ -519,7 +519,8 @@ footer .list-inline .list-inline-item {
     padding: 40px 20px;
   }
 
-  .content-Testimonios, .content-Testimonios .row {
+  .content-Testimonios,
+  .content-Testimonios .row {
     display: flex;
   }
 
@@ -527,7 +528,7 @@ footer .list-inline .list-inline-item {
     width: 300px;
     height: 250px;
   }
-  
+
   .grid-item audio {
     margin: 0px auto;
     width: 50%;
@@ -545,7 +546,8 @@ footer .list-inline .list-inline-item {
 }
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
-  .content-Testimonios, .content-Testimonios .row {
+  .content-Testimonios,
+  .content-Testimonios .row {
     display: flex;
   }
 
@@ -553,7 +555,7 @@ footer .list-inline .list-inline-item {
     width: 100%;
     height: 200px;
   }
-  
+
   .grid-item audio {
     margin: 0px auto;
     width: 100%;
