--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,9 +3,10 @@
   --dark-blue-main: hsl(218, 28%, 13%);
   --dark-color: #1a1a1a;
   --white-color: #ffffff;
-  --light-grey-color: #fdfbfb;
+  --light-grey-color: #b7d968;
+  --orange-alter: #efc98f;
   --gold-color: #ffb944;
-  --title-color: rgba(216, 123, 29, 0.6);
+  --title-color: #b7d968;
   --green-whatsapp: rgb(34, 173, 34);
 }
 
@@ -43,7 +44,7 @@ h1 {
   font-weight: 700;
   line-height: 80px;
   position: relative;
-  color: var(--light-grey-color);
+  color: var(--orange-alter);
 }
 h2 {
   font-size: 48px;
@@ -62,7 +63,7 @@ h5 {
 
 p {
   font-size: 20px;
-  color: var(--light-grey-color);
+  color: var(--white-color);
   opacity: 0.7;
   line-height: 2;
   margin-bottom: 0px;
@@ -89,7 +90,7 @@ a:hover {
 .btn-secondary {
   font-size: 24px;
   background-color: var(--green-whatsapp);
-  color: var(--light-grey-color);
+  color: var(--white-color);
   border: 2px solid var(--green-whatsapp);
   border-radius: 35px;
   position: relative;
@@ -180,7 +181,8 @@ section {
 }
 
 .navbar-toggler {
-  font-size: 40px;
+  color: var(--title-color);
+  font-size: 30px;
 }
 .navbar-toggler:focus {
   outline: none;
@@ -216,7 +218,7 @@ My Video
 }
 
 #hero p {
-  color: var(--light-grey-color);
+  color: var(--white-color);
 }
 
 /* //////////////
@@ -441,9 +443,9 @@ footer .list-inline .list-inline-item {
 //////////////*/
 
 @media (max-width: 575.98px) {
-  .text-logo {
+  /*  .text-logo {
     display: none;
-  }
+  } */
 
   h1 {
     font-size: 40px;
@@ -490,9 +492,9 @@ footer .list-inline .list-inline-item {
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
-  .text-logo {
+  /* .text-logo {
     display: none;
-  }
+  } */
 
   .content-Testimonios,
   .content-Testimonios .row {
