--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,7 @@ body {
 h1 {
   font-size: 66px;
   font-weight: 700;
-  font-family: "Piedra", cursive;
+  font-family: "Cinzel Decorative", cursive;
   line-height: 80px;
   position: relative;
   text-transform: uppercase;
@@ -65,7 +65,8 @@ h2 {
   color: var(--light-grey-color);
 }
 h3 {
-  font-size: 33px;
+  font-size: 28px;
+  font-family: "Cinzel Decorative", cursive;
   color: var(--white-color);
 }
 h5 {
@@ -210,7 +211,7 @@ My Video
 
 #myVideo {
   position: fixed;
-  top: 90px;
+  top: 60px;
   right: 0;
   bottom: 0;
   min-width: 100%;
@@ -222,7 +223,6 @@ My Video
 //////////////*/
 
 #hero {
-  /* background-image: url(../../assets/images/principal.jpg); */
   background-size: cover;
   padding-top: 90px;
   min-height: 700px;
@@ -485,23 +485,23 @@ footer .list-inline .list-inline-item {
   }
 }
 
-@media (max-width: 575px) {
+/* @media (max-width: 575px) {
   #myVideo {
     top: 60px;
     right: -110%;
-    /* max-width: 990px; */
+    
   }
   .video-fondo {
     object-fit: cover;
   }
-}
+} */
 
-@media (max-width: 575px) and (orientation: landscape) {
+/* @media (max-width: 575px) and (orientation: landscape) {
   #myVideo {
     left: 0;
     max-width: 100%;
   }
-}
+} */
 
 @media (min-width: 576px) and (max-width: 767.98px) {
   /* .text-logo {
