--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -197,7 +197,7 @@ section {
   color: var(--title-color);
   font-size: 30px;
 }
-.navbar-toggler:focus {
+.navbar-toggler:focus, audio {
   outline: none;
 }
 
@@ -243,6 +243,12 @@ My Video
   margin: 10px 0;
   border-radius: 2px;
 }
+
+/* detalles img pequeñas */
+/* 
+.images-pequeñas {
+  /* height: 100%;
+} */
 
 .portfolio-container img {
   -moz-transition: all 0.8s;
