--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,12 @@
 :root {
-  --dark-blue: hsl(217, 28%, 15%);
-  --dark-blue-main: hsl(218, 28%, 13%);
+  --dark-blue: rgb(38, 56, 89);
+  --dark-blue-main: #17223b;
   --dark-color: #1a1a1a;
   --white-color: #f5f5f0;
-  --light-grey-color: #b7d968;
+  --light-grey-color: #1bbc9b;
   --orange-alter: #efc98f;
   --gold-color: #ffb944;
-  --title-color: #b7d968;
+  --title-color: #81d5c4;
   --green-whatsapp: rgb(34, 173, 34);
 }
 
@@ -28,7 +28,7 @@ body {
   background-color: var(--dark-blue-main);
 }
 .bgLight {
-  background-color: var(--white-color);
+  background-color: var(--dark-blue);
 }
 .bgLightGrey {
   position: relative;
@@ -46,9 +46,9 @@ h1 {
   line-height: 80px;
   position: relative;
   text-transform: uppercase;
-  color: var(--orange-alter);
+  color: var(--light-grey-color);
 }
-.retroshadow {
+/* .retroshadow {
   color: rgb(134, 10, 10);
   letter-spacing: 0.1em;
   text-shadow: 0 -1px 0 rgb(240, 113, 113), 0 1px 0 #2e2e2e, 0 2px 0 #2c2c2c,
@@ -56,17 +56,19 @@ h1 {
     0 7px 0 #222, 0 8px 0 #202020, 0 9px 0 #1e1e1e, 0 10px 0 #1c1c1c,
     0 11px 0 #1a1a1a, 0 12px 0 #181818, 0 13px 0 #161616, 0 14px 0 #141414,
     0 15px 0 #121212, 0 22px 30px rgba(0, 0, 0, 0.9);
-}
+} */
 
 h2 {
   font-size: 48px;
   margin-bottom: 30px;
+  font-weight: 900;
   position: relative;
   color: var(--light-grey-color);
 }
 h3 {
-  font-size: 28px;
+  font-size: 26px;
   font-family: "Cinzel Decorative", cursive;
+  text-transform: uppercase;
   color: var(--white-color);
 }
 h5 {
@@ -223,14 +225,19 @@ My Video
 //////////////*/
 
 #hero {
+  padding-top: 160px;
+  min-height: 720px;
+  /* color: var(--white-color); */
+  /* background-color: rgba(38, 56, 89, 0.7); */
+  background-image: url("../images/vid.gif");
   background-size: cover;
-  padding-top: 90px;
-  min-height: 700px;
-  color: var(--white-color);
+  /*  */
 }
 
 #hero p {
-  color: yellow;
+  color: var(--white-color);
+  font-size: 1.7rem;
+  padding: 40px;
   text-shadow: 2px 2px 100px black;
 }
 
