--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 :root {
-  --dark-blue: rgb(38, 56, 89);
+  --dark-blue: #263859;
   --dark-blue-main: #17223b;
+  --dark-gradiante: rgba(23, 34, 59, 0.7);
   --dark-color: #1a1a1a;
   --white-color: #f5f5f0;
   --light-grey-color: #1bbc9b;
@@ -27,6 +28,11 @@ body {
 .bgDark {
   background-color: var(--dark-blue-main);
 }
+
+.bgDarkTemplate {
+  background-color: var(--dark-gradiante);
+}
+
 .bgLight {
   background-color: var(--dark-blue);
 }
