Paralax Gradiant-background

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -226,6 +226,16 @@ My Video
   min-height: 100%;
 }
 
+/* gradiant Fixed */
+
+.gradiant-fijo {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+
+  z-index: -1;
+}
+
 /* //////////////
    Hero
 //////////////*/
