--- a/assets/css/whats2.css
+++ b/assets/css/whats2.css
@@ -17,6 +17,9 @@
   animation-name: pulse;
 }
 
+.fa-times {
+  color: white;
+}
 .nav-bottom {
   display: flex;
   flex-direction: row;
@@ -58,7 +61,9 @@
   box-shadow: 1px 1px 6px 0px rgba(68, 68, 68, 0.705);
 }
 
-.whatsapp-button:focus, .send-msPopup:focus, .closePopup:focus {
+.whatsapp-button:focus,
+.send-msPopup:focus,
+.closePopup:focus {
   outline: none;
 }
 
