--- a/assets/css/slide.css
+++ b/assets/css/slide.css
@@ -1,5 +1,6 @@
 .content-slide {
   position: relative;
+  top: 30px;
   overflow: hidden;
 }
 
@@ -244,7 +245,7 @@
 }
 
 .trail {
-  z-index: 1;
+  z-index: -1;
   position: absolute;
 }
 
