--- a/assets/css/slide.css
+++ b/assets/css/slide.css
@@ -11,7 +11,7 @@
   -webkit-transition: all 0.25s ease-in;
   transition: all 0.25s ease-in;
   -webkit-transform: translateX(0);
-          transform: translateX(0);
+  transform: translateX(0);
 }
 
 @media only screen and (max-width: 1000px) {
@@ -26,7 +26,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
   overflow: hidden;
   position: relative;
 }
@@ -41,13 +41,13 @@
   background-color: rgba(0, 0, 0, 0.2);
   width: 55%;
   -webkit-transform: skewX(7deg);
-          transform: skewX(7deg);
+  transform: skewX(7deg);
   position: absolute;
   height: 100%;
   left: -10%;
   padding-left: 20rem;
   -webkit-transform-origin: 0 100%;
-          transform-origin: 0 100%;
+  transform-origin: 0 100%;
 }
 @media only screen and (max-width: 800px) {
   .slider .box .bg {
@@ -61,7 +61,7 @@
     bottom: 0;
     height: 54%;
     -webkit-transform: skewX(0deg);
-            transform: skewX(0deg);
+    transform: skewX(0deg);
   }
 }
 .slider .box .bg::before {
@@ -74,14 +74,14 @@
   background-color: inherit;
   /* pointer-events: none; */
   -webkit-transform: skewX(10deg);
-          transform: skewX(10deg);
+  transform: skewX(10deg);
 }
 @media only screen and (max-width: 650px) {
   .slider .box .bg::before {
     width: 120%;
     bottom: 0;
     -webkit-transform: skewX(0deg);
-            transform: skewX(0deg);
+    transform: skewX(0deg);
   }
 }
 .slider .box .details {
@@ -98,13 +98,13 @@
     text-align: center;
     padding: 2rem;
     -webkit-transform: translateY(-9rem);
-            transform: translateY(-9rem);
+    transform: translateY(-9rem);
   }
 }
 .slider .box .details p {
   display: inline-block;
   font-size: 1.3rem;
-  color: #b5b4b4;
+  color: #fff;
   margin-bottom: 2rem;
   margin-right: 5rem;
 }
@@ -139,7 +139,8 @@
 .slider .box1 .illustration .inner {
   background-color: #ff0077;
 }
-.slider .box1 .illustration .inner::after, .slider .box1 .illustration .inner::before {
+.slider .box1 .illustration .inner::after,
+.slider .box1 .illustration .inner::before {
   background-color: rgba(255, 0, 119, 0.4);
 }
 .slider .box1 button {
@@ -151,7 +152,8 @@
 .slider .box2 .illustration .inner {
   background-color: #0033ff;
 }
-.slider .box2 .illustration .inner::after, .slider .box2 .illustration .inner::before {
+.slider .box2 .illustration .inner::after,
+.slider .box2 .illustration .inner::before {
   background-color: rgba(0, 51, 255, 0.4);
 }
 .slider .box2 button {
@@ -161,13 +163,14 @@
   background-color: #00501d;
 }
 .slider .box3 .illustration .inner {
-  background-color: #00ff44;
+  background-color: #67bb7d;
 }
-.slider .box3 .illustration .inner::after, .slider .box3 .illustration .inner::before {
+.slider .box3 .illustration .inner::after,
+.slider .box3 .illustration .inner::before {
   background-color: rgba(0, 255, 68, 0.4);
 }
 .slider .box3 button {
-  background-color: #00ff44;
+  background-color: #359c50;
 }
 .slider .box4 {
   background-color: #554d00;
@@ -175,7 +178,8 @@
 .slider .box4 .illustration .inner {
   background-color: #ff4e00;
 }
-.slider .box4 .illustration .inner::after, .slider .box4 .illustration .inner::before {
+.slider .box4 .illustration .inner::after,
+.slider .box4 .illustration .inner::before {
   background-color: rgba(255, 78, 0, 0.4);
 }
 .slider .box4 button {
@@ -187,7 +191,8 @@
 .slider .box5 .illustration .inner {
   background-color: #8000ff;
 }
-.slider .box5 .illustration .inner::after, .slider .box5 .illustration .inner::before {
+.slider .box5 .illustration .inner::after,
+.slider .box5 .illustration .inner::before {
   background-color: rgba(128, 0, 255, 0.4);
 }
 .slider .box5 button {
@@ -205,9 +210,9 @@
     display: -webkit-box;
     display: flex;
     -webkit-box-pack: center;
-            justify-content: center;
+    justify-content: center;
     -webkit-box-align: center;
-            align-items: center;
+    align-items: center;
   }
 }
 .slider .illustration div {
@@ -217,7 +222,7 @@
   background-color: #ff0077;
   position: relative;
   -webkit-transform: skewX(-10deg);
-          transform: skewX(-10deg);
+  transform: skewX(-10deg);
 }
 @media only screen and (max-width: 800px) {
   .slider .illustration div {
@@ -225,7 +230,8 @@
     width: 15rem;
   }
 }
-.slider .illustration div::after, .slider .illustration div::before {
+.slider .illustration div::after,
+.slider .illustration div::before {
   content: "";
   position: absolute;
   height: 100%;
@@ -236,11 +242,11 @@
 }
 .slider .illustration div::after {
   -webkit-transform: translate(4rem, -1rem);
-          transform: translate(4rem, -1rem);
+  transform: translate(4rem, -1rem);
 }
 .slider .illustration div::before {
   -webkit-transform: translate(2rem, -2rem);
-          transform: translate(2rem, -2rem);
+  transform: translate(2rem, -2rem);
 }
 
 .trail {
@@ -252,7 +258,7 @@
   bottom: 1%;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   width: 60%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
