--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
   --dark-blue-main: #17223b;
   --dark-gradiante: rgba(24, 23, 59, 0.9);
   --dark-color: #1a1a1a;
-  --white-color: #f5f5f0;
+  --white-color: #fff;
   --light-grey-color: #1bbc9b;
   --orange-alter: #efc98f;
   --gold-color: #ffb944;
