--- a/assets/css/slide.css
+++ b/assets/css/slide.css
@@ -300,5 +300,14 @@
   /* display: inherit; */
   display: inline-block;
   align-items: center;
-  max-width: 500px;
+  max-width: 600px;
+}
+
+@media only screen and (max-width: 650px) {
+  .img-side {
+    /* display: inherit; */
+    display: inline-block;
+    align-items: center;
+    max-width: 300px;
+  }
 }
