changes to slide
cambios al slide y el primer testimonio junto con ajusten en el css del button WhastApp (complimiendo 2 archivos en un unico archivo css)

--- a/assets/css/slide.css
+++ b/assets/css/slide.css
@@ -102,6 +102,17 @@
     transform: translateY(-9rem);
   }
 }
+
+@media only screen and (max-width: 576px) {
+  .content-slide {
+    top: 10px;
+  }
+
+  .slider .box .details {
+    padding-top: 0.5rem;
+  }
+}
+
 .slider .box .details p {
   display: inline-block;
   font-size: 1.3rem;
